finetuned the description of website, and made website defaultly open a renewability graph

--- a/index.html
+++ b/index.html
@@ -15,26 +15,20 @@
     </header>
     
     <section>
-        <p>Welcome to our website! You can watch here visualizations of Finland's electricity
-            production, consumption and import. 
-            This website uses 
-            <a id="link-to-fingrid-website" href="https://data.fingrid.fi/en/datasets">fingrid.fi</a>
-            as the source of the data. 
-            <br> <br>
-            'Overview' button shows total production, total consumption and 
-            total exportation (+ means export, - means import) of electricity in Finland. 
-            <br> <br>
-            'Renewability' button shows how much of total production is achieved
-            via domestic wind, hydro or solar energy, which are the main 
-            renewable energy sources in Finland. 
+        <p>Welcome to our website! Here you can easily draw a line chart of Finland's
+            electricity production, consumption and exportation by pressing the 'Overview'.
+            You can also draw a line chart of Finland's electricity production compared to
+            the production of wind, hydro and solar energy in Finland by pressing the "Renewability".
             <br><br>
-            Please notice that you should also select a starting and
-            ending date for the data visualization you want to do. 
-            We visualize here data only in accurasy of days.
-            So, for example, if it is 18th march and you want to see
-            information of yesterday's electricity,
-            you can select starting date: 17th march
-            and ending date: 18th march.
+            Remember to also select the starting and ending dates! 
+            Default setting is from yesterday 02:00 to today's current time 
+            (15 minutes before the current time of Finland). But you may select for example
+            last year's summer months or winter months for comparison!
+            <br> <br>
+            We hope you liked our website! Our website uses 
+            <a id="link-to-fingrid-website" href="https://data.fingrid.fi/en/datasets">fingrid.fi</a>
+            as the source of the data and is able to fetch up-to-date data of Finland's electricity!
+            
         </p>
     </section>
 
